--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -4,6 +4,23 @@
   </div>
   <div>
     <h3 class="mt-3">Movies of the List</h3>
+    <ul class="row">
+    <% @list.bookmarks.all.each do |element| %>
+          <li class="col-4 list-group-item d-flex justify-content-between align-items-center shadow">
+            <div class="ml-3 my-auto ">
+              <h2><%= element.movie.title %></h2>
+              <p><%= element.comment %></p>
+            </div>
+          </li>
+    <% end %>
+  </ul>
+  </div>
+
+  <div class="container">
+    <h2 class="text-uppercase">Add a Bookmark</h2>
+  </div>
+  <div class="container">
+    <%= render 'bookmark_form' %>
   </div>
   <div class="d-flex justify-content-left align-items-center">
       <%= link_to 'Back To Index', lists_path, :class => "btn btn-primary m-2" %>
