--- a/app/views/lists/new.html.erb
+++ b/app/views/lists/new.html.erb
@@ -1,5 +1,8 @@
-<div class="container">
-  <h2 class="text-uppercase">Create a New Restaurant</h2>
+<div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/background.png);">
+  <div class="container">
+    <h1>Create a New list</h1>
+    <p>Check this list movies</p>
+  </div>
 </div>
 <div class="container">
   <%= render 'form'  %>
