--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -1,28 +1,30 @@
-<div class="container">
-  <div class="d-flex justify-content-left align-items-center">
-    <h2 class="text-uppercase py-3 m-0">Movie List: <%= @list.name %></h2>
+<div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/background.png);">
+  <div class="container">
+    <h1><%= @list.name %></h1>
+    <p>Check this list movies</p>
   </div>
+</div>
+<div class="container">
   <div>
     <h3 class="mt-3">Movies of the List</h3>
-    <ul class="row">
-    <% @list.bookmarks.all.each do |element| %>
-          <li class="col-4 list-group-item d-flex justify-content-between align-items-center shadow">
-            <div class="ml-3 my-auto ">
-              <h2><%= element.movie.title %></h2>
-              <p><%= element.comment %></p>
-            </div>
-          </li>
-    <% end %>
-  </ul>
-  </div>
-
-  <div class="container">
-    <h2 class="text-uppercase">Add a Bookmark</h2>
-  </div>
-  <div class="container">
-    <%= render 'bookmark_form' %>
-  </div>
-  <div class="d-flex justify-content-left align-items-center">
-      <%= link_to 'Back To Index', lists_path, :class => "btn btn-primary m-2" %>
+    <ul class="cards">
+      <% @list.bookmarks.all.each do |element| %>
+        <div class="card-trip">
+            <li class="col-4 list-group-item">
+                <img src="https://picsum.photos/400/300" />
+              <div class="">
+                <div class="card-trip-infos">
+                  <h2><%= element.movie.title %></h2>
+                  <p><%= element.comment %></p>
+                  <h2 class="card-trip-pricing"><%= element.movie.rating %></h2>
+                </div>
+              </div>
+            </li>
+        </div>
+      <% end %>
+      <li class="col-10 mx-auto list-group-item d-flex justify-content-between align-items-center">
+        <%= render 'bookmark_form' %>
+      </li>
+      </ul>
   </div>
 </div>
