Card Buton for delete positioned

--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -11,6 +11,7 @@
   text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
   border-radius: 5px;
   box-shadow: 0 0 15px rgba(0,0,0,0.2);
+
 }
 
 .card-trip {
@@ -53,8 +54,8 @@
   width: 40px;
 }
 
-// .card-trip-pricing{
-//   position: absolute;
-//   right: 15px;
-//   top: 15px;
-// }
+.card-delete {
+  position: absolute;
+  top: 2px;
+  right: 2px;
+}
