--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -19,7 +19,7 @@
                 </div>
                 <div class="d-flex justify-content-between p-4 py-2">
                   <p><%= element.comment %></p>
-                  <%= link_to '<i class="fa fa-trash"></i>'.html_safe, list_bookmark_path(@list),
+                  <%= link_to '<i class="fa fa-trash"></i>'.html_safe, bookmark_path(element.id),
                     data: {turbo_method: :delete, turbo_confirm: "Are you sure?"}, :class => "btn btn-danger card-delete m-3" %>
                 </div>
               </div>
